--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700;900&family=Open+Sans:wght@400;600;700;800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Merriweather:wght@300;400;700;900&family=Open+Sans:wght@400;600;700;800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter&family=Merriweather:wght@300;400;700;900&family=Open+Sans:wght@400;600;700;800&display=swap");
 /* shared styles */
 * {
   margin: 0;
@@ -13,7 +13,7 @@
 
 /* banner section */
 .banner-section {
-    width: 100%;
+  width: 100%;
   background-image: url("../images/Banner\ Image.png");
   background-repeat: no-repeat;
   margin: 30px auto;
@@ -42,80 +42,190 @@
 }
 
 /* discount section */
-.discount-section{
+.discount-section {
   text-align: center;
 }
-.discount-title{
-  color: #F00;
-text-align: center;
-font-family: Inter;
-font-size: 88px;
-font-weight: 700;
-margin-bottom: 48px;
+.discount-title {
+  color: #f00;
+  text-align: center;
+  font-family: Inter;
+  font-size: 88px;
+  font-weight: 700;
+  margin-bottom: 48px;
 }
-.discount-section p{
-  color: #F00;
-text-align: center;
-font-family: Inter;
-font-size: 20px;
-font-style: normal;
-font-weight: 500;
-line-height: normal;
-margin-bottom: 16px;
+.discount-section p {
+  color: #f00;
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  margin-bottom: 16px;
 }
 
-.discount-section h3{
+.discount-section h3 {
   color: #070211;
-text-align: center;
-font-family: Inter;
-font-size: 43px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-margin-bottom: 48px;
+  text-align: center;
+  font-family: Inter;
+  font-size: 43px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: 48px;
 }
 /* welcome section */
-.welcome-section{
+.welcome-section {
   background-image: url("../images/Vectorrr.png");
   background-repeat: no-repeat;
   background-size: 100%;
   padding-left: 70px;
   margin-top: 126px;
   display: flex;
-  
 }
-.welcome-section h1{
-  color: #FFF;
-font-size: 54px;
-font-weight: 900;
-line-height: 70px;
-letter-spacing: 5.54px;
-padding-top: 100px;
-padding-bottom: 17px;
+.welcome-section h1 {
+  color: #fff;
+  font-size: 54px;
+  font-weight: 900;
+  line-height: 70px;
+  letter-spacing: 5.54px;
+  padding-top: 100px;
+  padding-bottom: 17px;
 }
-.welcome-section p{
-  color: rgba(255, 255, 255, 0.80);
-font-family: Inter;
-font-size: 18px;
-font-weight: 400;
-line-height: 25px;
-max-width: 700px;
-text-align: justify;
-padding-bottom: 10px;
+.welcome-section p {
+  color: rgba(255, 255, 255, 0.8);
+  font-family: Inter;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  max-width: 700px;
+  text-align: justify;
+  padding-bottom: 10px;
 }
-.welcome-section .join{
-  color: #FFF;
+.welcome-section .join {
+  color: #fff;
   text-align: left;
-font-family: Inter;
-font-size: 20px;
-font-weight: 700;
-text-transform: uppercase;
-padding-left: 32px;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding-left: 32px;
 }
-.welcome-section img{
+.welcome-section img {
   width: 25%;
   padding-top: 60px;
   padding-right: 105px;
   padding-bottom: 142px;
   padding-left: 60px;
+}
+
+/* joining section */
+.joining-section {
+  text-align: center;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 0, 0, 0.1) 0%,
+    rgba(255, 0, 0, 0) 100%
+  );
+  padding-top: 100px;
+}
+.joining-section .schedule {
+  color: #f00;
+  text-align: center;
+  font-family: Inter;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 56px;
+  text-transform: capitalize;
+}
+.joining-section p {
+  color: #070211;
+  font-family: Inter;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 56px;
+  text-transform: capitalize;
+}
+.joining-section .primary-btn {
+  display: inline-flex;
+  padding: 16px 32px;
+  gap: 10px;
+  border-radius: 8px;
+  background: #f00;
+  border: none;
+  color: #fff;
+  text-align: center;
+  font-family: Inter;
+  font-size: 20px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+.joining-section .btn{
+  padding-top: 48px;
+  padding-bottom: 110px;
+}
+/* coming soon section */
+
+.coming-soon{
+  display: flex;
+  margin-top: 100px;
+}
+
+.text-1{
+  padding-top: 104px;
+  gap: 20px;
+}
+.text-1 h6{
+  color: #F00;
+text-align: left;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+}
+.text-1 h4{
+  color: #070211;
+font-size: 48px;
+font-weight: 900;
+text-transform: capitalize;
+white-space: nowrap;
+}
+.text-1 p{
+  color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+line-height: 32px;
+padding-right: 10px;
+text-align: justify;
+}
+.coming-soon .circular-img{
+  padding-left: 30px;
+  border-radius: 100%;
+}
+.coming-soon .circular-img img{
+  border: 10px solid red;
+  border-radius: 100%;
+  padding: 20px;
+}
+.text-2{
+  padding-left: 30px;
+}
+.text-2 h3{
+  color: #F00;
+font-family: Inter;
+font-size: 48px;
+font-weight: 700;
+padding-top: 112px;
+}
+.text-2 p{
+  color: rgba(7, 2, 17, 0.60);
+font-family: Inter;
+font-size: 20px;
+font-weight: 400;
+line-height: 25px;
+}
+.text-2 .lower-img{
+  width: 120px;
+  height: 120px;
 }
