--- a/styles/style.css
+++ b/styles/style.css
@@ -381,3 +381,9 @@ border: none;
   margin-top: 50px;
   padding-bottom: 120px;
 }
+.lower-footer p{
+  color: #FFF;
+font-family: Inter;
+font-size: 24px;
+font-weight: 500;
+}
