--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,8 @@
   padding: 0;
   font-family: merriweather;
 }
-.container ,hr{
+.container,
+hr {
   width: 82%;
   margin: 0px auto;
 }
@@ -16,9 +17,10 @@
   width: 100%;
   background-image: url("../images/Banner\ Image.png");
   background-repeat: no-repeat;
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
   margin: 30px auto;
   background-size: 100%;
-  position: relative;
+  border-radius: 10px;
 }
 
 .banner-section p {
@@ -38,7 +40,7 @@
   font-style: normal;
   font-weight: 900;
   line-height: 95px;
-  padding-bottom: 177px;
+  padding-bottom: 125px;
 }
 
 /* discount section */
@@ -50,7 +52,7 @@
   text-align: center;
   font-family: Inter;
   font-size: 88px;
-  font-weight: 700;
+  font-weight: 800;
   margin-bottom: 48px;
 }
 .discount-section p {
@@ -70,7 +72,7 @@
   font-family: Inter;
   font-size: 43px;
   font-style: normal;
-  font-weight: 700;
+  font-weight: 800;
   line-height: normal;
   margin-bottom: 48px;
 }
@@ -82,6 +84,8 @@
   padding-left: 70px;
   margin-top: 126px;
   display: flex;
+  box-shadow: inset 0 0 0 1000px rgba(0,0,0,.5);
+  border-radius: 10px;
 }
 .welcome-section h1 {
   color: #fff;
@@ -115,7 +119,7 @@
   width: 25%;
   padding-top: 60px;
   padding-right: 105px;
-  padding-bottom: 142px;
+  padding-bottom: 50px;
   padding-left: 60px;
 }
 
@@ -128,6 +132,7 @@
     rgba(255, 0, 0, 0) 100%
   );
   padding-top: 100px;
+  margin-top: 120px;
 }
 .joining-section .schedule {
   color: #f00;
@@ -229,6 +234,62 @@
   width: 120px;
   height: 120px;
 }
+
+/* sale section */
+.sale-section {
+  margin-top: 120px;
+}
+.sale-section .discount-text{
+  text-align: center;
+}
+.sale-section .discount-text h6 {
+  color: #070211;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
+}
+.sale-section .discount-text h1{
+  color: #070211;
+font-family: Merriweather;
+font-size: 72px;
+font-weight: 900;
+}
+.sale-section .discount-text h1 span{
+  color: #F00;
+text-align: center;
+font-family: Merriweather;
+font-size: 72px;
+font-weight: 900;
+}
+.sale-section .discount-text p{
+  color: rgba(7, 2, 17, 0.60);
+text-align: center;
+font-family: Inter;
+font-size: 20px;
+font-weight: 500;
+line-height: 32px;
+width: 958px;
+margin: 0 auto;
+}
+.sale-section .upper-pic{
+  text-align: right;
+}
+.sale-section .upper-pic .discounts{
+  position: absolute;
+  left: 570px;
+  top: 3465px;
+  transform: translate(0 100%);
+}
+.sale-section .lower-pic .box{
+  width: 47%;
+  position: absolute;
+  top: 3500px;
+  left: 100px;
+}
+.sale-section .lower-pic .red-bottom{
+  width: 100%;
+  margin-top: -5px;
+}
 /* portfolio section */
 .portfolio-section {
   margin-top: 120px;
@@ -242,7 +303,6 @@
 }
 .portfolio-section .text-part h4 {
   color: #070211;
-  font-family: Merriweather;
   font-size: 48px;
   font-style: normal;
   font-weight: 900;
@@ -281,6 +341,9 @@
 .content {
   align-items: center;
   text-align: center;
+}
+.content img {
+  padding-top: 80px;
 }
 .subscribe-section .content h1 {
   color: #070211;
@@ -349,7 +412,8 @@ footer {
 .foot-head .phone {
   display: flex;
 }
-.foot-head .phone p , .foot-head .website p{
+.foot-head .phone p,
+.foot-head .website p {
   color: #fff;
   font-family: Inter;
   font-size: 24px;
@@ -360,30 +424,30 @@ footer {
 .foot-head .website {
   display: flex;
 }
-hr{
+hr {
   /* width: 1320px; */
-height: 1px;
-background: rgba(255, 255, 255, 0.15);
-border: none;
+  height: 1px;
+  background: rgba(255, 255, 255, 0.15);
+  border: none;
 }
 
 /* footer social section */
-.social{
+.social {
   margin-top: 48px;
   text-align: center;
   margin-bottom: 48px;
 }
 
 /* lower footer section */
-.lower-footer{
+.lower-footer {
   display: flex;
   justify-content: space-between;
   margin-top: 50px;
   padding-bottom: 120px;
 }
-.lower-footer p{
-  color: #FFF;
-font-family: Inter;
-font-size: 24px;
-font-weight: 500;
+.lower-footer p {
+  color: #fff;
+  font-family: Inter;
+  font-size: 24px;
+  font-weight: 500;
 }
