--- a/styles/style.css
+++ b/styles/style.css
@@ -170,6 +170,10 @@ hr {
   padding-top: 48px;
   padding-bottom: 110px;
 }
+/* joining section hover effects */
+.joining-section .primary-btn:hover{
+  cursor: pointer;
+}
 /* coming soon section */
 
 .coming-soon {
@@ -332,6 +336,12 @@ margin: 0 auto;
 .portfolio-section .box-1 {
   margin-bottom: 24px;
 }
+/* portfolio section hover effects */
+.portfolio-section .box-1 img:hover,
+.portfolio-section .box-2 img:hover{
+  border: 2px solid black;
+  border-radius: 15px;
+}
 /* subscribe section*/
 .subscribe-section {
   margin-top: 120px;
@@ -389,6 +399,10 @@ margin: 0 auto;
   font-weight: 600;
   text-transform: capitalize;
   vertical-align: bottom;
+}
+/* subscribe section hover effects */
+.subscribe-section .email-field button:hover{
+  cursor: pointer;
 }
 /* footer section */
 footer {
